WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77661
http/tests/inspector/indexeddb/database-structure.html failing on chromium win/linux
https://bugs.webkit.org/show_bug.cgi?id=77661
Summary
http/tests/inspector/indexeddb/database-structure.html failing on chromium wi...
Nate Chapin
Reported
2012-02-02 11:35:23 PST
See
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=database-structure.html
Will mark as failing for now.
Attachments
Patch
(3.81 KB, patch)
2012-02-03 01:38 PST
,
Vsevolod Vlasov
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-02-03 01:38:22 PST
Created
attachment 125290
[details]
Patch
Vsevolod Vlasov
Comment 2
2012-02-07 00:16:27 PST
Committed
r106911
: <
http://trac.webkit.org/changeset/106911
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug