http/tests/inspector/indexeddb/database-structure.html failing on chromium win/linux https://bugs.webkit.org/show_bug.cgi?id=77661

Reviewed by Yury Semikhatsky.

Source/WebCore:

* inspector/InspectorIndexedDBAgent.cpp:
(WebCore):

LayoutTests:

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/94829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106911 268f45cc-cd09-0410-ab3c-d52691b4dbfc